# aucomet

./: .gitignore  README.md  environment_setup
utilities/poetry/exoplanet_search_au/: pyproject.toml
vectorial_model/: index.yaml  pyproject.toml
vectorial_model/CO_to_CO+/: pydantic.yaml
vectorial_model/CO_to_CO+/input/: CO_outburst_100percent.yaml  CO_outburst_20percent.yaml  parameters.yaml
vectorial_model/CO_to_CO+/output/: CO_outburst_1000percent.csv  CO_outburst_100percent.csv  parameters_fortran.csv  parameters_rust.csv  pydantic.csv
vectorial_model/deprecated/FastHaserTest/: FastHaser.py
vectorial_model/deprecated/config_tester/: oneshot.py
vectorial_model/deprecated/oneshot/: vmout.vm
vectorial_model/deprecated/timescales_vs_production/: timescales_vs_production.py
vectorial_model/festou_fortran/: vectorial_model_fortran_source_notes.tex
vectorial_model/model_stability/: gen_plots.py  model_stability.py
vectorial_model/old_standalone/: environmentsetup  parameters.yaml  vmodel.py
vectorial_model/outburst_animations/pyv_test/: 00.50_days.vm  01.00_days.vm
vectorial_model/outburst_water_examples/input/: water_sinewave.yaml
vectorial_model/projects/: project_index.yaml
vectorial_model/pyvectorial/: comparison_out  fortran_comparison.py  input_transformer.py  outbursts.py  parameters.py  pyvectorial.py  setup.py  tests.py  timedependentproduction.py  utils.py  vm_reader.py  vm_runner.py  vm_writer.py  vmplotter.py
vectorial_model/pyvectorial_old/: setup.py
vectorial_model/sputter_comparison/: fragment_sputtering_comparison.tex
(+2629 files in other folders)
