[tool.poetry]
name = "aucomet_vectorial"
version = "0.1.0"
description = "Scripts for probing the vectorial model of cometary atmospheres"
authors = ["Shawn Oset"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
dill = ">=0.3.7"
numpy = ">=1.26.2"
matplotlib = ">=3.8.2"
plotly = ">=5.18.0"
pyabel = ">=0.9.0"
pytest-cov = "^4.1.0"
sbpy = "^0.4.0"
pandas = "^2.1.3"

[tool.poetry.dev-dependencies]
pytest = ">=7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
